--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -141,23 +141,23 @@ flutter:
         - asset: assets/fonts/Futura-Light.otf
           weight: 300
   
-    - family: Okta-Neue
+    # - family: Okta-Neue
 
-      fonts:
+    #   fonts:
 
-        - asset: assets/fonts/Okta-Neue-Regular.ttf
+    #     - asset: assets/fonts/Okta-Neue-Regular.ttf
 
-        - asset: assets/fonts/Okta-Neue-Black.ttf
-          weight: 900
+    #     - asset: assets/fonts/Okta-Neue-Black.ttf
+    #       weight: 900
 
-        - asset: assets/fonts/Okta-Neue-Bold.ttf
-          weight: 700
+    #     - asset: assets/fonts/Okta-Neue-Bold.ttf
+    #       weight: 700
 
-        - asset: assets/fonts/Okta-Neue-Semi-Bold.ttf
-          weight: 600
+    #     - asset: assets/fonts/Okta-Neue-Semi-Bold.ttf
+    #       weight: 600
 
-        - asset: assets/fonts/Okta-Neue-Medium.ttf
-          weight: 500
+    #     - asset: assets/fonts/Okta-Neue-Medium.ttf
+    #       weight: 500
 
     - family: Getai
 
