--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   liquid_progress_indicator_v2: ^0.5.0
   fl_chart: ^0.64.0
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
